--- a/sem3/MCSE/Web_Scraping/Books_to_Scrape.ipynb
+++ b/sem3/MCSE/Web_Scraping/Books_to_Scrape.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "8316aeb4-cca8-4a3e-b631-5fc090a2a3a8",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "7c270644-631f-46de-b64c-57da6575cd5c",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "id": "4eb70497-7158-4fd1-aff0-fb7e01bed90b",
    "metadata": {},
    "outputs": [],
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "1aac0543-96c0-4635-87e8-b819b681bca1",
    "metadata": {},
    "outputs": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "c865d047-fe62-4d30-8c12-98d52cdfe669",
    "metadata": {},
    "outputs": [
@@ -397,42 +397,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Mean Price: £38.05\n",
+      "Median Price: £41.38\n",
+      "Mode Price: £13.99\n",
       "\n",
-      "--- Price Statistics ---\n",
-      "count    20.000000\n",
-      "mean     38.048500\n",
-      "std      15.135231\n",
-      "min      13.990000\n",
-      "25%      22.637500\n",
-      "50%      41.380000\n",
-      "75%      51.865000\n",
-      "max      57.250000\n",
-      "Name: Price, dtype: float64\n",
-      "\n",
-      "--- Rating Statistics ---\n",
-      "count    20.000000\n",
-      "mean      2.850000\n",
-      "std       1.565248\n",
-      "min       1.000000\n",
-      "25%       1.000000\n",
-      "50%       3.000000\n",
-      "75%       4.000000\n",
-      "max       5.000000\n",
-      "Name: Rating, dtype: float64\n",
-      "\n",
-      "--- Availability Counts ---\n",
-      "Availability\n",
-      "In stock    20\n",
-      "Name: count, dtype: int64\n",
-      "\n",
-      "--- Average Price by Rating ---\n",
-      "Rating\n",
-      "1    40.018333\n",
-      "2    36.830000\n",
-      "3    42.316667\n",
-      "4    31.105000\n",
-      "5    39.750000\n",
-      "Name: Price, dtype: float64\n"
+      "Summary Statistics:\n",
+      "           Price\n",
+      "count  20.000000\n",
+      "mean   38.048500\n",
+      "std    15.135231\n",
+      "min    13.990000\n",
+      "25%    22.637500\n",
+      "50%    41.380000\n",
+      "75%    51.865000\n",
+      "max    57.250000\n"
      ]
     }
    ],
@@ -442,23 +420,19 @@
     "# Clean Price column (remove £ and convert to float)\n",
     "df[\"Price\"] = df[\"Price\"].str.replace(\"£\", \"\").astype(float)\n",
     "\n",
-    "# Convert Rating to numeric scale\n",
-    "rating_map = {\"One\": 1, \"Two\": 2, \"Three\": 3, \"Four\": 4, \"Five\": 5}\n",
-    "df[\"Rating\"] = df[\"Rating\"].map(rating_map)\n",
     "\n",
-    "# Basic descriptive statistics\n",
-    "print(\"\\n--- Price Statistics ---\")\n",
-    "print(df[\"Price\"].describe())\n",
+    "# Descriptive statistics\n",
+    "mean_price = df[\"Price\"].mean()\n",
+    "median_price = df[\"Price\"].median()\n",
+    "mode_price = df[\"Price\"].mode()[0]  # mode() returns a Series\n",
     "\n",
-    "print(\"\\n--- Rating Statistics ---\")\n",
-    "print(df[\"Rating\"].describe())\n",
+    "print(f\"Mean Price: £{mean_price:.2f}\")\n",
+    "print(f\"Median Price: £{median_price:.2f}\")\n",
+    "print(f\"Mode Price: £{mode_price:.2f}\")\n",
     "\n",
-    "print(\"\\n--- Availability Counts ---\")\n",
-    "print(df[\"Availability\"].value_counts())\n",
-    "\n",
-    "# Example: Average price by rating\n",
-    "print(\"\\n--- Average Price by Rating ---\")\n",
-    "print(df.groupby(\"Rating\")[\"Price\"].mean())"
+    "# Quick summary of all numeric columns\n",
+    "print(\"\\nSummary Statistics:\")\n",
+    "print(df.describe())"
    ]
   },
   {
